RESOLVED FIXED267838
REGRESSION (265615@main): fast/attachment/cocoa/wide-attachment-rendering.html is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=267838
Summary REGRESSION (265615@main): fast/attachment/cocoa/wide-attachment-rendering.htm...
Attachments
Gerald Squelart
Comment 1 2024-01-21 12:32:20 PST
EWS
Comment 2 2024-01-21 15:29:27 PST
Committed 273278@main (f8ece4ab18cf): <https://commits.webkit.org/273278@main> Reviewed commits have been landed. Closing PR #23026 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.