Correct the CSSValueAppleSystemTertiaryFill fallback: alpha=12 instead of 13. https://bugs.webkit.org/show_bug.cgi?id=267838 rdar://114294654

Reviewed by Tim Nguyen.

The original fallback value (in case it is not available in the SDK or in the
AppKit framework) was originally computed by rounding 5% of 255 to its nearest
integer value 13, but the value in the framework is actually 12.
That caused test results to differ depending on the age of the SDK or framework.

* LayoutTests/platform/mac-ventura/fast/attachment/mac/wide-attachment-image-controls-basic-expected.txt: Removed.
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac-wk2/fast/attachment/cocoa/wide-attachment-rendering-expected.txt:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::systemColor const):

Canonical link: https://commits.webkit.org/273278@main